# django-strawberry-cookbook

./: .env.example  LICENSE  Makefile  README.md  pyproject.toml
authorization/: admin.py  apps.py  models.py  queries.py  signals.py  types.py
authorization/migrations/: 0001_initial.py
config/: settings.py  urls.py
config/middleware/: __init__.py
graphql_api/: schema.py  urls.py
